block of partners

--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -16,7 +16,7 @@
     {% include 'mainapp/header.html' %}
 {% endblock %}
 
-<div id="main" class="">
+<div id="main" class="mt-3">
     {% block content %}
     {% endblock %}
 </div>
