--- a/mainapp/templates/mainapp/footer.html
+++ b/mainapp/templates/mainapp/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center mt-5">
     <span>&copy; {% now "Y" %}</span>
     <span>team2/2</span>
 </div>
