--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -17,7 +17,7 @@
                         <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Откликнуться</a>
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
-                        <a href="{% url 'main:vac_res_list' %}" class="text-dark">Назад</a>
+                        <a href="{% url 'main:vac_res_list' %}" class="text-dark text-decoration-none">Назад</a>
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
                         <a href="#" class="text-dark"><i class="far fa-star"></i></a>
