feature - verification email, new design

--- a/applicantapp/templates/applicantapp/applicant_detail.html
+++ b/applicantapp/templates/applicantapp/applicant_detail.html
@@ -13,7 +13,7 @@
 
                 <div class="form-button mt-4">
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
-                        <a href="{% url 'main:main_list' %}" class="text-dark">Назад</a>
+                        <a href="{% url 'main:vac_res_list' %}" class="text-dark">Назад</a>
                     </button>
                 </div>
             </div>
