--- a/companyapp/templates/companyapp/pa_content.html
+++ b/companyapp/templates/companyapp/pa_content.html
@@ -19,7 +19,7 @@
     <div class="my-3 p-3 bg-body rounded shadow-sm">
         <h6 class="border-bottom pb-2 mb-0">Мои вакансии</h6>
         {% if vacancies_list %}
-            <table id="datatable" class="table dt-responsive nowrap table-vertical"
+            <table id="datatable" class="table table-striped dt-responsive nowrap table-vertical"
                    width="100%" cellspacing="0">
                 <thead>
                 <tr>
