--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -12,20 +12,18 @@
         crossorigin="anonymous"></script>
 <body>
 
-{% block header %}
-    {% include 'mainapp/header.html' %}
-{% endblock %}
+<div class="container">
+    {% block header %}
+        {% include 'mainapp/header.html' %}
+    {% endblock %}
 
-<div id="main" class="mt-3">
     {% block content %}
     {% endblock %}
+
+    {% block footer %}
+        {% include 'mainapp/footer.html' %}
+    {% endblock %}
 </div>
-
-
-{% block footer %}
-    {% include 'mainapp/footer.html' %}
-{% endblock %}
-
 
 </body>
 </html>
