--- a/applicantapp/templates/applicantapp/base.html
+++ b/applicantapp/templates/applicantapp/base.html
@@ -18,35 +18,33 @@
 </head>
 <body>
 
-
-<div id="page">
-    {% include 'mainapp/header.html' %}
-    <div class="wrapper" id="header">
-        <div class="container">
+<div class="container">
+    <div id="page">
+        {% include 'mainapp/header.html' %}
+        <div class="wrapper" id="header">
             <div class="header__logo"></div>
             {% block menu %}
                 {#                {% include 'gbfp/include/inc_main_menu.html' %}#}
             {% endblock %}
         </div>
-    </div>
 
-    <div class="wrapper" id="page-title">
-        <div class="container">
+        <div class="wrapper" id="page-title">
             <div class="pt-2 pb-3 mb-0 small lh-sm border-bottom w-100">
                 <div class="d-flex justify-content-between align-items-center">
                     {% if request.resolver_match.url_name == 'view' %}
-                        <strong class="text-gray-dark">Личный кабинет соискателя {{ request.user|title }}</strong>
-                        <a class="mt-2 btn btn-outline-secondary" href="{% url 'applicant:applicant_update' request.user.pk %}">
+                        <h4 class="text-gray-dark">Личный кабинет - {{ request.user|title }}</h4>
+                        <a class="mt-2 btn btn-outline-secondary"
+                           href="{% url 'applicant:applicant_update' request.user.pk %}">
                             Редактировать профиль
                         </a>
                     {% elif request.resolver_match.url_name == 'resume_update' %}
 
-                        <strong class="text-gray-dark">Редактирование резюме {{ form.name.value }}</strong>
+                        <h4 class="text-gray-dark">Редактирование резюме {{ form.name.value }}</h4>
                         <a class="mt-2 btn btn-outline-secondary" href="{% url 'applicant:view' %}">
                             Вернуться в личный кабинет
                         </a>
                     {% elif request.resolver_match.url_name == 'applicant_update' %}
-                        <strong class="text-gray-dark">Редактирование профиля {{ request.user.username }}</strong>
+                        <h4 class="text-gray-dark">Редактирование профиля {{ request.user.username }}</h4>
                         <a class="mt-2 btn btn-outline-secondary" href="{% url 'applicant:view' %}">
                             Вернуться в личный кабинет
                         </a>
@@ -55,14 +53,16 @@
             </div>
         </div>
     </div>
+
+    <div class="wrapper section">
+        <div id="personal_area">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+
+    {% include 'mainapp/footer.html' %}
 </div>
 
-<div class="wrapper section">
-    <div id="personal_area" class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
-</div>
-{% include 'mainapp/footer.html' %}
 </body>
 </html>
