--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -30,7 +30,7 @@
                     </button>
                 </div>
             </form>
-            <span>Регистрация</span><br>
+            <p class="mt-4">Регистрация</p>
             <div class="d-grid gap-2">
                 <a class="btn btn-outline-secondary btn-sm " href="{% url 'auth:register_applicant' %}"
                    role="button">Соискателя</a>
