--- a/mainapp/templates/mainapp/main.html
+++ b/mainapp/templates/mainapp/main.html
@@ -3,26 +3,27 @@
 
 {% block content %}
     <h3 class="text-center mb-3">Партнеры</h3>
-    {% for company in company_list %}
-        <div class="row row-cols-1 row-cols-md-4 g-6">
-            <div class="col">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150x50" class="card-img-top" alt="...">
+    <div class="row row-cols-1 row-cols-md-4 g-6">
+        <div class="col">
+            {% for company in company_list %}
+                <div class="card shadow-sm">
+{#                    <img src="https://via.placeholder.com/150x50" class="card-img-top" alt="...">#}
                     <div class="card-body">
                         <h5 class="card-title">{{ company.company_name }}</h5>
                         <p class="card-text">{{ company.company_about }}</p>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
-    {% endfor %}
+    </div>
+
     <h3 class="text-center mt-3 mb-3">Новости</h3>
     {% for post in blog_posts %}
-        <div class="card m-2 shadow-sm" style="">
+        <div class="card mb-2 shadow-sm" style="">
             <!-- <img src="" class="card-img-top" alt="..."> -->
             <div class="card-body">
-                <h5 class="card-title">{{ post.title }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted ">{{ post.date }}</h6>
+                <h5 class="card-title mb-1">{{ post.title }}</h5>
+                <p class="card-subtitle mb-3 text-muted ">{{ post.date }}</p>
                 <p class="card-text">{{ post.text }}</p>
             </div>
         </div>
