--- a/mainapp/templates/mainapp/header.html
+++ b/mainapp/templates/mainapp/header.html
@@ -10,7 +10,7 @@
                     aria-controls="navbarId" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarId">
+            <div class="collapse navbar-collapse ms-3" id="navbarId">
                 <div class="navbar-nav flex-row flex-wrap flex-grow">
                     {#                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" aria-current="page" #}
                     {#                       href="{% url 'main' %}">Главная</a>#}
@@ -77,7 +77,7 @@
 {##}
 {#                </div>#}
             {% else %}
-                <a class="btn btn-outline-light rounded-pill" href="{% url 'auth:login' %}"
+                <a class="btn btn-outline-primary rounded-pill" href="{% url 'auth:login' %}"
                    role="button">Войти</a>
 
             {% endif %}
