--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,6 +43,17 @@ a {
     background-color: #569bd0;
 }
 
+.btn-outline-primary {
+    color: #64b5f6;
+    border-color: #64b5f6;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #64b5f6;
+    border-color: #64b5f6;
+}
+
 .dropdown-item.active, .dropdown-item:active {
     background-color: #569bd0;
 }
