--- a/applicantapp/templates/applicantapp/applicant_content.html
+++ b/applicantapp/templates/applicantapp/applicant_content.html
@@ -28,6 +28,7 @@
                        <th>#</th>
                        <th>Название</th>
                        <th>Черновик</th>
+                       <th>Проверено<br>модератором</th>
                        <th>Опубликовано</th>
                        <th>Действия</th>
                    </tr>
@@ -38,11 +39,23 @@
                            <td>{{ resume.id }}</td>
                            <td>{{ resume.resume_name }}</td>
                            <td> {% if resume.is_draft %} Да {% else %} Нет {% endif %}</td>
+                           <td> {% if resume.is_approved %} Да {% else %} Нет {% endif %}</td>
                            <td> {% if resume.is_active %} Да {% else %} Нет {% endif %}</td>
                            <td>
-                               <a href="{% url 'resume:resume_update' resume.pk %}">Редактировать</a>
-                               <a href="{% url 'resume:resume_delete' resume.pk %}"
-                                  class="text-muted">Удалить</a>
+<!--                               <a href="{% url 'resume:resume_detail' resume.pk %}" class="text-muted" title="Просмотр">-->
+<!--                                   <i class="fas fa-eye"></i></a>-->
+                               <a href="{% url 'resume:resume_update' resume.pk %}" class="text-muted ms-2" title="Редактирование">
+                                   <i class="fas fa-pencil-alt"></i></a>
+                               {% if resume.is_approved %}
+                                   {% if resume.is_active %}
+                                       <a href="{% url 'resume:resume_delete' resume.pk %}" class="text-muted ms-2" title="Снять активность">
+                                           <i class="fa fa-toggle-on" aria-hidden="true"></i></a>
+                                   {% else %}
+                                       <a href="{% url 'resume:resume_delete' resume.pk %}" class="text-muted ms-2" title="Установить активность">
+                                           <i class="fa fa-toggle-off" aria-hidden="true"></i></a>
+                                   {% endif %}
+                               {% endif %}
+
                            </td>
                        </tr>
                    {% endfor %}
