--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -15,7 +15,7 @@
                 <div class="form-button mt-4">
                     <button class="btn btn-success w-md waves-effect waves-light">
                         {% if in_responses %}
-                            <a class="text-decoration-none text-white">Ждем ответ</a>
+                            <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Ждем ответ</a>
                         {% else %}
                             <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Откликнуться</a>
                         {% endif %}
@@ -25,8 +25,7 @@
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
                         {% if in_favorites %}
-                        <a href="#" class="text-dark"><i class="far fa-star" aria-hidden="true"></i></a>
-
+                            <a href="{% url 'main:main_favorites' object.pk %}" class="text-dark"><i class="fas fa-star" aria-hidden="true"></i></a>
                         {% else %}
                             <a href="{% url 'main:main_favorites' object.pk %}" class="text-dark"><i class="far fa-star"></i></a>
                         {% endif %}
