bug fix: предложения в ЛК

--- a/applicantapp/templates/applicantapp/applicant_content.html
+++ b/applicantapp/templates/applicantapp/applicant_content.html
@@ -75,8 +75,8 @@
                <thead>
                    <tr>
                        <th>#</th>
-                       <th>Резюме</th>
-                       <th>Компания</th>
+                       <th>Резюме, по которому Вас пригласили на обеседование</th>
+                       <th>Кто пригласил</th>
                    </tr>
                </thead>
                <tbody>
