--- a/companyapp/templates/companyapp/pa_content.html
+++ b/companyapp/templates/companyapp/pa_content.html
@@ -75,8 +75,8 @@
                <thead>
                    <tr>
                        <th>#</th>
-                       <th>Резюме</th>
-                       <th>Соискатель</th>
+                       <th>Вакансия, на котороую откликнулся соискатель</th>
+                       <th>Кто откликнулся</th>
                    </tr>
                </thead>
                <tbody>
