--- a/applicantapp/templates/applicantapp/applicant_content.html
+++ b/applicantapp/templates/applicantapp/applicant_content.html
@@ -63,7 +63,7 @@
                </table>
 
         {% endif %}
-        <a class="btn btn-outline-secondary" href="{% url 'resume:resume_create' %}">Создать резюме</a>
+        <a class="btn btn-outline-secondary" href="{% url 'resume:resume_create' %}">Создать</a>
         </div>
         <div class="my-3 p-3 bg-body rounded shadow-sm">
         <h6 class="border-bottom pb-2 mb-0">Мои предложения</h6>
