fix - css styles

--- a/companyapp/templates/companyapp/company_detail.html
+++ b/companyapp/templates/companyapp/company_detail.html
@@ -17,7 +17,7 @@
                 <h5> Компания основана {{ object.company_since }}</h5>
                 <div class="form-button mt-4">
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
-                        <a href="{% url 'main:vac_res_list' %}" class="text-dark">Назад</a>
+                        <a href="{% url 'main:vac_res_list' %}" class="text-dark text-decoration-none">Назад</a>
                     </button>
                 </div>
             </div>
