--- a/companyapp/templates/companyapp/pa_content.html
+++ b/companyapp/templates/companyapp/pa_content.html
@@ -75,7 +75,7 @@
                <thead>
                    <tr>
                        <th>#</th>
-                       <th>Вакансия, на котороую откликнулся соискатель</th>
+                       <th>Вакансия, на которую откликнулся соискатель</th>
                        <th>Кто откликнулся</th>
                    </tr>
                </thead>
