--- a/mainapp/templates/mainapp/vacancy_list.html
+++ b/mainapp/templates/mainapp/vacancy_list.html
@@ -4,7 +4,7 @@
     {% if user.is_authenticated %}
         <h3 class="m-2">{{ title }}</h3>
         {% for obj in data %}
-            <div class="card w-auto m-2" style="">
+            <div class="card w-auto m-2 shadow-sm" style="">
                 <div class="card-body">
                     <h5 class="card-title">{{ obj.name }}</h5>
 
