--- a/vacancyapp/templates/vacancyapp/vacancy_detail.html
+++ b/vacancyapp/templates/vacancyapp/vacancy_detail.html
@@ -2,19 +2,20 @@
 
 {% block content %}
     <div class="col-12 h-100">
-        <div class="col-6">
+        <div class="col-8">
             <div class="mt-3">
-                <h2>{{object.vacancy_name}}</h2>
-                <p><a href="{% url 'company:company_detail' object.company.id %}" class="text-decoration-none">{{ object.company.company_name }}</a></p>
+                <h2>{{ object.vacancy_name }}</h2>
+                <p><a href="{% url 'company:company_detail' object.company.id %}"
+                      class="text-decoration-none">{{ object.company.company_name }}</a></p>
                 <h5>Описание вакансии</h5>
-                <p> {{object.description}}</p>
+                <p> {{ object.description }}</p>
                 <h5>Заработная плата</h5>
-                <p> {{object.salary}}</p>
-                <p class="mt-5">Вакансия создана {{ object.created_at }}</p>
-                <div class="form-button mt-4">
+                <p> {{ object.salary }}</p>
+                <div class="form-button mt-5">
                     <button class="btn btn-success w-md waves-effect waves-light">
                         {% if in_responses %}
-                            <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Ждем ответ</a>
+                            <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Ждем
+                                ответ</a>
                         {% else %}
                             <a href="{% url 'main:main_invite' object.pk %}" class="text-decoration-none text-white">Откликнуться</a>
                         {% endif %}
@@ -24,12 +25,15 @@
                     </button>
                     <button class="btn btn-light w-md waves-effect waves-light border-secondary">
                         {% if in_favorites %}
-                            <a href="{% url 'main:main_favorites' object.pk %}" class="text-dark"><i class="fas fa-star" aria-hidden="true"></i></a>
+                            <a href="{% url 'main:main_favorites' object.pk %}" class="text-dark"><i class="fas fa-star"
+                                                                                                     aria-hidden="true"></i></a>
                         {% else %}
-                            <a href="{% url 'main:main_favorites' object.pk %}" class="text-dark"><i class="far fa-star"></i></a>
+                            <a href="{% url 'main:main_favorites' object.pk %}" class="text-dark"><i
+                                    class="far fa-star"></i></a>
                         {% endif %}
                     </button>
                 </div>
+                <p class="mt-4">Вакансия создана {{ object.created_at }}</p>
             </div>
         </div>
     </div>
