fix - css styles

--- a/applicantapp/templates/applicantapp/applicant_content.html
+++ b/applicantapp/templates/applicantapp/applicant_content.html
@@ -21,7 +21,7 @@
            {% if not resume_list %}
             <p class="lead">Пока нет резюме</p>
            {% else %}
-               <table id="datatable" class="table table-striped dt-responsive nowrap table-vertical" width="100%"
+               <table id="datatable" class="table table-striped dt-responsive nowrap table-vertical size" width="100%"
                       cellspacing="0">
                <thead>
                    <tr>
