--- a/mainapp/templates/mainapp/main.html
+++ b/mainapp/templates/mainapp/main.html
@@ -4,16 +4,16 @@
 {% block content %}
     <h3 class="text-center mb-3">Партнеры</h3>
     <div class="row row-cols-1 row-cols-md-4 g-6">
-        <div class="col">
-            {% for company in company_list %}
+        {% for company in company_list %}
+            <div class="col">
                 <div class="card shadow-sm">
                     <div class="card-body">
-                        <h5 class="card-title">{{ company.company_name }}</h5>
-                        <p class="card-text">{{ company.company_about }}</p>
+                        <a href="{% url 'company:company_detail' company.id %}" class="card-title text-decoration-none fs-6 text-decor-2">{{ company.company_name }}</a>
+                        <p class="card-text text-decor mt-2">{{ company.company_about }}</p>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
+            </div>
+        {% endfor %}
     </div>
 
     <h3 class="text-center mt-3 mb-3">Новости</h3>
