fix response table in html

--- a/companyapp/templates/companyapp/pa_content.html
+++ b/companyapp/templates/companyapp/pa_content.html
@@ -74,7 +74,6 @@
                       cellspacing="0">
                <thead>
                    <tr>
-                       <th>#</th>
                        <th>Вакансия, на которую откликнулся соискатель</th>
                        <th>Кто откликнулся</th>
                    </tr>
@@ -83,9 +82,8 @@
                    {% for item in responses_list %}
                         {% if item.vacancy %}
                             <tr>
-                               <td>{{ item.id }}</td>
                                <td>{{ item.vacancy.vacancy_name }}</td>
-                               <td><a href="{% url 'applicant:applicant_detail' item.user.id %}" class="text-decoration-none">{{ item.user.first_name }}</a></td>
+                               <td><a href="{% url 'applicant:applicant_detail' item.user.id %}" class="text-decoration-none">{{ item.user.last_name }} {{ item.user.first_name }} {{ item.user.user_patronymic }}</a></td>
                            </tr>
                         {% endif %}
                    {% endfor %}
